--- a/src/main/java/com/girsang/girsangkafe/UI/FrameUtama.form
+++ b/src/main/java/com/girsang/girsangkafe/UI/FrameUtama.form
@@ -301,9 +301,12 @@
                 <Property name="verticalTextPosition" type="int" value="3"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="btnPemasukan">
+            <Component class="javax.swing.JButton" name="btnPenjualan">
               <Properties>
-                <Property name="text" type="java.lang.String" value=" Pemasukan "/>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Gambar/Transaksi.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Penjualan"/>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
